// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InstructorSessionSendRemindersPageComponent > should snap when there are no participants to remind 1`] = `
<tm-instructor-session-send-reminders-page
  courseId={[Function String]}
  courseName={[Function String]}
  courseService={[Function _CourseService]}
  feedbackSessionEndingTimestamp={[Function Number]}
  feedbackSessionId={[Function String]}
  feedbackSessionName={[Function String]}
  feedbackSessionTimeZone={[Function String]}
  feedbackSessionsService={[Function _FeedbackSessionsService]}
  hasLoadingFailed="false"
  instructorListInfoTableRowModels={[Function Array]}
  instructorService={[Function _InstructorService]}
  isLoading="false"
  isSendingCopyToInstructor={[Function Boolean]}
  isSendingReminders="false"
  navigationService={[Function _NavigationService]}
  preselectNonSubmitters="false"
  route={[Function Object]}
  statusMessageService={[Function _StatusMessageService]}
  studentListInfoTableRowModels={[Function Array]}
  studentService={[Function _StudentService]}
>
  <tm-loading-retry>
    <div
      aria-hidden="true"
    />
    <div>
      <div
        class="card bg-light top-padded text-center text-sm-start"
      >
        <div
          class="card-body"
        >
          <div
            class="row text-center"
          >
            <div
              class="col-md-2 text-md-end font-bold"
            >
              Course ID
            </div>
            <div
              class="col-md-3 text-md-start"
              id="course-id"
            >
               exampleId 
            </div>
          </div>
          <div
            class="row text-center"
          >
            <div
              class="col-md-2 text-md-end font-bold"
            >
              Time Zone
            </div>
            <div
              class="col-md-3 text-md-start"
              id="time-zone"
            >
               UTC 
            </div>
          </div>
          <div
            class="row text-center"
          >
            <div
              class="col-md-2 text-md-end font-bold"
            >
              Course Name
            </div>
            <div
              class="col-md-10 text-md-start"
              id="course-name"
            >
               Example Course 
            </div>
          </div>
          <div
            class="row text-center"
          >
            <div
              class="col-md-2 text-md-end font-bold"
            >
              Session Name
            </div>
            <div
              class="col-md-10 text-md-start"
              id="session-name"
            >
               Test Session 
            </div>
          </div>
          <div
            class="row text-center"
          >
            <div
              class="col-md-2 text-md-end font-bold"
            >
              Deadline
            </div>
            <div
              class="col-md-10 text-md-start"
              id="deadline"
            >
               5 Apr 2000 2:00:00 
            </div>
          </div>
        </div>
      </div>
      <p>
         Select the student(s) or instructor(s) you want to remind, then click 
        <b>
          Send Reminders
        </b>
         at the bottom of the page. 
      </p>
      <h4
        class="p-2 bg-info"
      >
        There are no participants to remind.
      </h4>
    </div>
  </tm-loading-retry><br /><div
    class="align-row-right"
  >
    <span
      class="form-check align-self-center"
    >
      <input
        class="form-check-input ng-untouched ng-pristine ng-valid"
        id="sendCopyToIns"
        type="checkbox"
      />
      <label
        class="form-check-label"
        for="sendCopyToIns"
      >
        Send me a copy
      </label>
    </span>
    <button
      class="btn btn-light"
      id="cancel-btn"
      type="button"
    >
      Cancel
    </button>
    <button
      class="btn btn-primary"
      disabled=""
      id="send-reminders-btn"
      type="button"
    >
       Send Reminders 
    </button>
  </div>
</tm-instructor-session-send-reminders-page>
`;

exports[`InstructorSessionSendRemindersPageComponent > should snap while loading 1`] = `
<tm-instructor-session-send-reminders-page
  courseId=""
  courseName=""
  courseService={[Function _CourseService]}
  feedbackSessionEndingTimestamp="0"
  feedbackSessionId={[Function String]}
  feedbackSessionName=""
  feedbackSessionTimeZone={[Function String]}
  feedbackSessionsService={[Function _FeedbackSessionsService]}
  hasLoadingFailed="false"
  instructorListInfoTableRowModels={[Function Array]}
  instructorService={[Function _InstructorService]}
  isLoading={[Function Boolean]}
  isSendingCopyToInstructor={[Function Boolean]}
  isSendingReminders="false"
  navigationService={[Function _NavigationService]}
  preselectNonSubmitters="false"
  route={[Function Object]}
  statusMessageService={[Function _StatusMessageService]}
  studentListInfoTableRowModels={[Function Array]}
  studentService={[Function _StudentService]}
>
  <tm-loading-retry>
    <div
      aria-hidden="true"
    />
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
  </tm-loading-retry><br /><div
    class="align-row-right"
  >
    <span
      class="form-check align-self-center"
    >
      <input
        class="form-check-input ng-untouched ng-pristine ng-valid"
        id="sendCopyToIns"
        type="checkbox"
      />
      <label
        class="form-check-label"
        for="sendCopyToIns"
      >
        Send me a copy
      </label>
    </span>
    <button
      class="btn btn-light"
      id="cancel-btn"
      type="button"
    >
      Cancel
    </button>
    <button
      class="btn btn-primary"
      disabled=""
      id="send-reminders-btn"
      type="button"
    >
       Send Reminders 
    </button>
  </div>
</tm-instructor-session-send-reminders-page>
`;

exports[`InstructorSessionSendRemindersPageComponent > should snap with students and instructors loaded 1`] = `
<tm-instructor-session-send-reminders-page
  courseId={[Function String]}
  courseName={[Function String]}
  courseService={[Function _CourseService]}
  feedbackSessionEndingTimestamp={[Function Number]}
  feedbackSessionId={[Function String]}
  feedbackSessionName={[Function String]}
  feedbackSessionTimeZone={[Function String]}
  feedbackSessionsService={[Function _FeedbackSessionsService]}
  hasLoadingFailed="false"
  instructorListInfoTableRowModels={[Function Array]}
  instructorService={[Function _InstructorService]}
  isLoading="false"
  isSendingCopyToInstructor={[Function Boolean]}
  isSendingReminders="false"
  navigationService={[Function _NavigationService]}
  preselectNonSubmitters="false"
  route={[Function Object]}
  statusMessageService={[Function _StatusMessageService]}
  studentListInfoTableRowModels={[Function Array]}
  studentService={[Function _StudentService]}
>
  <tm-loading-retry>
    <div
      aria-hidden="true"
    />
    <div>
      <div
        class="card bg-light top-padded text-center text-sm-start"
      >
        <div
          class="card-body"
        >
          <div
            class="row text-center"
          >
            <div
              class="col-md-2 text-md-end font-bold"
            >
              Course ID
            </div>
            <div
              class="col-md-3 text-md-start"
              id="course-id"
            >
               exampleId 
            </div>
          </div>
          <div
            class="row text-center"
          >
            <div
              class="col-md-2 text-md-end font-bold"
            >
              Time Zone
            </div>
            <div
              class="col-md-3 text-md-start"
              id="time-zone"
            >
               UTC 
            </div>
          </div>
          <div
            class="row text-center"
          >
            <div
              class="col-md-2 text-md-end font-bold"
            >
              Course Name
            </div>
            <div
              class="col-md-10 text-md-start"
              id="course-name"
            >
               Example Course 
            </div>
          </div>
          <div
            class="row text-center"
          >
            <div
              class="col-md-2 text-md-end font-bold"
            >
              Session Name
            </div>
            <div
              class="col-md-10 text-md-start"
              id="session-name"
            >
               Test Session 
            </div>
          </div>
          <div
            class="row text-center"
          >
            <div
              class="col-md-2 text-md-end font-bold"
            >
              Deadline
            </div>
            <div
              class="col-md-10 text-md-start"
              id="deadline"
            >
               5 Apr 2000 2:00:00 
            </div>
          </div>
        </div>
      </div>
      <p>
         Select the student(s) or instructor(s) you want to remind, then click 
        <b>
          Send Reminders
        </b>
         at the bottom of the page. 
      </p>
      <div
        class="form-check"
      >
        <input
          class="form-check-input ng-untouched ng-pristine ng-valid"
          id="remindAllStu"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="remindAllStu"
        >
          Select all students
        </label>
      </div>
      <div
        class="form-check"
      >
        <input
          class="form-check-input ng-untouched ng-pristine ng-valid"
          id="remindNotSubmittedStu"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="remindNotSubmittedStu"
        >
          Select all students not yet submitted
        </label>
      </div>
      <div
        class="form-check"
      >
        <input
          class="form-check-input ng-untouched ng-pristine ng-valid"
          id="remindAllIns"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="remindAllIns"
        >
          Select all instructors
        </label>
      </div>
      <div
        class="form-check"
      >
        <input
          class="form-check-input ng-untouched ng-pristine ng-valid"
          id="remindNotSubmittedIns"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="remindNotSubmittedIns"
        >
          Select all instructors not yet submitted
        </label>
      </div>
      <div
        class="table-responsive"
      >
        <tm-respondent-list-info-table>
          <div>
            <table
              class="table table-bordered"
              id="student-list-table"
            >
              <thead>
                <tr
                  class="background-color-medium-gray"
                >
                  <th>
                    <label>
                      <input
                        class="ng-untouched ng-pristine ng-valid"
                        type="checkbox"
                      />
                    </label>
                  </th>
                  <th
                    class="clickable"
                  >
                     Section 
                    <span
                      class="fa-stack"
                    >
                      <i
                        class="fas fa-sort"
                      />
                    </span>
                  </th>
                  <th
                    class="clickable"
                  >
                     Team 
                    <span
                      class="fa-stack"
                    >
                      <i
                        class="fas fa-sort"
                      />
                    </span>
                  </th>
                  <th
                    class="clickable"
                  >
                     Student Name 
                    <span
                      class="fa-stack"
                    >
                      <i
                        class="fas fa-sort"
                      />
                    </span>
                  </th>
                  <th
                    class="clickable"
                  >
                     Email 
                    <span
                      class="fa-stack"
                    >
                      <i
                        class="fas fa-sort"
                      />
                    </span>
                  </th>
                  <th
                    class="clickable"
                  >
                     Submitted? 
                    <span
                      class="fa-stack"
                    >
                      <i
                        class="fas fa-sort"
                      />
                    </span>
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  class="bg-warning"
                >
                  <td
                    class="align-center"
                  >
                    <label>
                      <input
                        class="ng-untouched ng-pristine ng-valid"
                        type="checkbox"
                      />
                    </label>
                  </td>
                  <td>
                     Section 1 
                  </td>
                  <td>
                     Team 1 
                  </td>
                  <td>
                     Alice 
                  </td>
                  <td>
                     alice@tmms.com 
                  </td>
                  <td>
                    <span>
                      No
                    </span>
                  </td>
                </tr>
                <tr>
                  <td
                    class="align-center"
                  >
                    <label>
                      <input
                        class="ng-untouched ng-pristine ng-valid"
                        type="checkbox"
                      />
                    </label>
                  </td>
                  <td>
                     Section 1 
                  </td>
                  <td>
                     Team 1 
                  </td>
                  <td>
                     Bob 
                  </td>
                  <td>
                     bob@tmms.com 
                  </td>
                  <td>
                    <span>
                      Yes
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
          <br />
          <div>
            <table
              class="table table-bordered"
              id="instructor-list-table"
            >
              <thead>
                <tr
                  class="background-color-medium-gray"
                >
                  <th>
                    <label>
                      <input
                        class="ng-untouched ng-pristine ng-valid"
                        type="checkbox"
                      />
                    </label>
                  </th>
                  <th
                    class="clickable"
                  >
                     Instructor Name 
                    <span
                      class="fa-stack"
                    >
                      <i
                        class="fas fa-sort"
                      />
                    </span>
                  </th>
                  <th
                    class="clickable"
                  >
                     Email 
                    <span
                      class="fa-stack"
                    >
                      <i
                        class="fas fa-sort"
                      />
                    </span>
                  </th>
                  <th
                    class="clickable"
                  >
                     Submitted? 
                    <span
                      class="fa-stack"
                    >
                      <i
                        class="fas fa-sort"
                      />
                    </span>
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  class="bg-warning"
                >
                  <td
                    class="align-center"
                  >
                    <label>
                      <input
                        class="ng-untouched ng-pristine ng-valid"
                        type="checkbox"
                      />
                    </label>
                  </td>
                  <td>
                     tester1 
                  </td>
                  <td>
                     tester1@tester.com 
                  </td>
                  <td>
                    <span>
                      No
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </tm-respondent-list-info-table>
      </div>
    </div>
  </tm-loading-retry><br /><div
    class="align-row-right"
  >
    <span
      class="form-check align-self-center"
    >
      <input
        class="form-check-input ng-untouched ng-pristine ng-valid"
        id="sendCopyToIns"
        type="checkbox"
      />
      <label
        class="form-check-label"
        for="sendCopyToIns"
      >
        Send me a copy
      </label>
    </span>
    <button
      class="btn btn-light"
      id="cancel-btn"
      type="button"
    >
      Cancel
    </button>
    <button
      class="btn btn-primary"
      disabled=""
      id="send-reminders-btn"
      type="button"
    >
       Send Reminders 
    </button>
  </div>
</tm-instructor-session-send-reminders-page>
`;
